# guitar-tab-scraper

python/: .gitignore  tab_scraper.py
python/Tab_Scraper/: README.md  pyproject.toml
python/Tab_Scraper/cache/: songcache.db.bak
python/Tab_Scraper/output/: output.csv
python/Tab_Scraper/tab_scraper/: main.py  tab_scraper.py  util.py
python/Tab_Scraper/tab_scraper/util/: song_cache.py
python/Tab_Scraper/test/: song_details.csv  songcache.db.bak  tests.py
python/Tab_Scraper/test/resources/: mock_page_data.json
python/Tab_Scraper/test/util/: mock_site_builder.py
python/Tab_Scraper/tests/: test_tab_scraper.py
python/Tab_Scraper/tests/resources/: mock_page.html  mock_song.html  mock_song_data.json
python/Tab_Scraper/tests/util/: mock_site_builder.py
